# rubik

./: Cargo.toml  README.md  build-run-web.sh
src/: app.rs  geometry.rs  lib.rs  main.rs  material.rs  shader.rs  shader.wgsl  world.rs
src/geometry/: cube.rs  geometry.rs  mesh.rs  plane.rs  rubik_piece.rs  vertex.rs
src/material/: mod.rs  shader.rs  shader.wgsl  shader_lit.rs  shader_lit.wgsl  shader_unlit.rs  shader_unlit.wgsl
src/rubik/: mod.rs  rubik.rs  rubik_cube.rs  rubik_move.rs
src/scene/: camera.rs  node.rs  renderer.rs
src/shader/: shader.rs  shader.wgsl
src/world/: camera.rs  light.rs  mod.rs  node.rs  renderer.rs
web/: index.html
