[package]
name = "rubik"
version = "0.8.0"
edition = "2021"

[dependencies]
winit = "0.30.7"
log = "0.4"
wgpu = { version = "23.0", features = ["webgl"] }
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }
tween = { version = "2.0.1", features = ["glam"] }
rand = "0.8.5"
fern = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-time = "1.1"
console_log = "1.0.0"
getrandom = { version = "0.2", features = [
    "js",
] } # wasm could not work without this
